# api/swagger/gifms-lpo.yaml
@@ -451,6 +451,118 @@ paths:
             
 
 
+        
+        
+        
+  '/lpo/{lpo_id}/submit_for_approval':
+    patch:
+      tags:
+        - LPO
+      summary: Submit lpo by ID
+      description: Submits lpo for approval
+      operationId: submit_lpo_for_approval
+      produces:
+        - application/json
+        - application/xml
+      parameters:
+        - name: lpo_id
+          in: path
+          description: ID of lpo to return object
+          required: true
+          type: integer
+          format: int64
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            $ref: '#/definitions/lpo'
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: lpo not found
+      security:
+        - api_key: []
+        
+        
+
+
+
+
+
+
+        
+        
+        
+  '/lpo/{lpo_id}/approve':
+    patch:
+      tags:
+        - LPO
+      summary: Approve lpo by ID
+      description: Approves LPO
+      operationId: approve_lpo
+      produces:
+        - application/json
+        - application/xml
+      parameters:
+        - name: lpo_id
+          in: path
+          description: ID of lpo to return object
+          required: true
+          type: integer
+          format: int64
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            $ref: '#/definitions/lpo'
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: lpo not found
+      security:
+        - api_key: []
+        
+        
+
+
+
+        
+        
+        
+  '/lpo/{lpo_id}/allocate':
+    patch:
+      tags:
+        - LPO
+      summary: Allocate lpo by ID
+      description: Allocate LPO
+      operationId: allocate_lpo
+      produces:
+        - application/json
+        - application/xml
+      parameters:
+        - name: lpo_id
+          in: path
+          description: ID of lpo to return object
+          required: true
+          type: integer
+          format: int64
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            $ref: '#/definitions/lpo'
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: lpo not found
+      security:
+        - api_key: []
+        
+        
+
+
+        
+
 
 
 
